crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__a_field_read_off_a_temporary_retains_its_result_and_releases_the_base.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @10:5-10:30
    v1 = new Maker() ! bb1  ; object
    ; stmt s1 @11:5-11:36
    retain v1
    v2 = call Maker::make(this: v1) ! bb2  ; object
    v3 = field.get v2, Foo::name  ; string
    retain v3
    release v2
    release v1
    release v3
    release v0
    return
  bb1:
    release v0
    propagate "m() at t.mwl:10"
  bb2:
    release v1
    release v0
    propagate "m() at t.mwl:11"
}
